[FIX] #460
Fix tool-bar separator not being centered when in vertical-mode. Fix separator color being way too light.

--- a/styles/packages/tool-bar.less
+++ b/styles/packages/tool-bar.less
@@ -3,7 +3,7 @@
     z-index: 5000;
 
     &.tool-bar-vertical .tool-bar-spacer {
-        margin: 0.5rem 0;
+        margin: 0.5rem auto;
         border-bottom: none;
     }
 
@@ -29,7 +29,7 @@
     &.tool-bar-horizontal,
     &.tool-bar-vertical {
         .tool-bar-spacer {
-            border-color: fade(@text-color, 5%);
+            border-color: fade(@accent-text-color, 5%);
         }
 
         &.gutter-bottom,
